--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,11 +26,11 @@ unit-test:
     - ret=$?
     - coverage report
     - exit $ret
-  after_script:
-    - SUFFIX=$RANDOM
-    - curl "http://10.0.0.11/sonar-scanner.tar.gz" -s -o "/tmp/sonar-$SUFFIX.tar.gz"
-    - tar -xf "/tmp/sonar-$SUFFIX.tar.gz"  -C /opt
-    - /opt/sonar-scanner/bin/sonar-scanner
+#  after_script:
+#    - SUFFIX=$RANDOM
+#    - curl "http://10.0.0.11/sonar-scanner.tar.gz" -s -o "/tmp/sonar-$SUFFIX.tar.gz"
+#    - tar -xf "/tmp/sonar-$SUFFIX.tar.gz"  -C /opt
+#    - /opt/sonar-scanner/bin/sonar-scanner
 
 #style-test:
 #  image: python:3.6.5
