--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ unit-test:
     - pip install -i https://pypi.tuna.tsinghua.edu.cn/simple -r requirements.txt
     - pip install -i https://pypi.tuna.tsinghua.edu.cn/simple coverage pylint pylint-django pytest-django
   script:
-    - coverage run  -m pytest tests.py
+    - coverage run  -m pytest xadmin
     - ret=$?
     - coverage report
     - exit $ret
