--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-import-export==1.2.0
 django-ranged-response==0.2.0
 django-reversion==3.0.4
 django-simple-captcha==0.5.12
+django-tinymce==2.8.0
 et-xmlfile==1.0.1
 future==0.15.2
 httplib2==0.9.2
@@ -29,6 +30,7 @@ packaging==19.1
 Pillow==6.1.0
 pluggy==0.12.0
 py==1.8.0
+pycodestyle==2.5.0
 pylint==2.3.1
 PyMySQL==0.9.3
 pyparsing==2.4.2
@@ -41,10 +43,10 @@ six==1.10.0
 sqlparse==0.3.0
 tablib==0.13.0
 toml==0.10.0
+typed-ast==1.4.0
 wcwidth==0.1.7
 wincertstore==0.2
 wrapt==1.11.1
 xlrd==1.2.0
 xlwt==1.3.0
 zipp==0.5.2
-pycodestyle==2.5.0
