--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,90 @@
+aliyun-python-sdk-core==2.13.10
+asn1crypto==0.24.0
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
 backports.csv==1.0.7
 certifi==2019.6.16
+cffi==1.11.5
+chardet==3.0.4
 colorama==0.4.1
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==4.5.4
+cryptography==1.9
 defusedxml==0.6.0
 diff-match-patch==20181111
 Django==2.2.1
+django-cors-headers==3.0.2
 django-crispy-forms==1.7.2
+django-filter==2.1.0
 django-formtools==2.1
+django-guardian==2.0.0
 django-import-export==1.2.0
 django-ranged-response==0.2.0
+django-redis==4.10.0
 django-reversion==3.0.4
 django-simple-captcha==0.5.12
+djangorestframework==3.9.4
+djangorestframework-jwt==1.11.0
+djangorestframework-jwt-proxy==0.1
+drf-extensions==0.3.1
 et-xmlfile==1.0.1
 future==0.15.2
 httplib2==0.9.2
+idna==2.8
 importlib-metadata==0.19
 isort==4.3.21
+itypes==1.1.0
 jdcal==1.4.1
+Jinja2==2.10.1
+jmespath==0.9.4
+jwt==0.5.3
 lazy-object-proxy==1.4.2
+Markdown==3.1.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==7.2.0
+mysqlclient==1.4.4
+oauthlib==2.0.7
 odfpy==1.4.0
 openpyxl==3.0.0
 packaging==19.1
 Pillow==6.1.0
 pluggy==0.12.0
 py==1.8.0
+pycodestyle==2.5.0
+pycparser==2.18
+pycryptodome==3.6.1
+PyJWT==1.7.1
 pylint==2.3.1
 PyMySQL==0.9.3
 pyparsing==2.4.2
 pytest==5.0.1
 pytest-django==3.5.1
+python3-openid==3.1.0
 pytz==2019.2
 PyYAML==5.1.2
+raven==6.10.0
+redis==3.3.11
+requests==2.22.0
+requests-oauthlib==0.8.0
 reversion==0.2
 six==1.10.0
+social-auth-app-django==2.1.0
+social-auth-core==1.7.0
 sqlparse==0.3.0
 tablib==0.13.0
 toml==0.10.0
+typed-ast==1.4.0
+unicodecsv==0.14.1
+uritemplate==3.0.0
+urllib3==1.25.3
 wcwidth==0.1.7
 wincertstore==0.2
 wrapt==1.11.1
 xlrd==1.2.0
+XlsxWriter==1.1.8
 xlwt==1.3.0
 zipp==0.5.2
 pycodestyle==2.5.0
