--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-import-export==1.2.0
 django-ranged-response==0.2.0
 django-reversion==3.0.4
 django-simple-captcha==0.5.12
+entrypoints==0.3
 et-xmlfile==1.0.1
 future==0.15.2
 httplib2==0.9.2
@@ -22,6 +23,7 @@ importlib-metadata==0.19
 isort==4.3.21
 jdcal==1.4.1
 jmespath==0.9.4
+keyring==19.2.0
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
 more-itertools==7.2.0
@@ -33,11 +35,14 @@ pluggy==0.12.0
 py==1.8.0
 pycodestyle==2.5.0
 pylint==2.3.1
+pylint-django==2.0.11
+pylint-plugin-utils==0.6
 PyMySQL==0.9.3
 pyparsing==2.4.2
 pytest==5.0.1
 pytest-django==3.5.1
 pytz==2019.2
+pywin32-ctypes==0.2.0
 PyYAML==5.1.2
 reversion==0.2
 six==1.10.0
@@ -50,4 +55,5 @@ wincertstore==0.2
 wrapt==1.11.1
 xlrd==1.2.0
 xlwt==1.3.0
+yagmail==0.11.224
 zipp==0.5.2
