--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ Pillow==6.1.0
 pluggy==0.12.0
 py==1.8.0
 pycodestyle==2.5.0
+pyflakes==2.1.1
 pylint==2.3.1
 pylint-django==2.0.11
 pylint-plugin-utils==0.6
