testing converge rate

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,3 @@
-sonar.inclusions= users/**
+sonar.inclusions= users/**/*, tests/**/*, xadmin/**/*, coding/**/*, fileshow/**/*, files/**/*, video/**/*
+sonar.python.coverage.reportPath=coverage.xml
+sonar.python.xunit.reportPath=xunit-reports/xunit-result.xml
