--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.inclusions= users/**/*, tests/**/*, xadmin/**/*, coding/**/*, fileshow/**/*, files/**/*, video/**/*
+sonar.inclusions= users/**/*, tests/**/*, coding/**/*, fileshow/**/*, files/**/*, video/**/*
 sonar.python.coverage.reportPath=coverage.xml
 sonar.python.xunit.reportPath=xunit-reports/xunit-result.xml
