--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,8 @@ unit-test:
     - pip install -i https://pypi.tuna.tsinghua.edu.cn/simple -r requirements.txt
     - pip install -i https://pypi.tuna.tsinghua.edu.cn/simple coverage pylint pylint-django pytest-django
   script:
-    - coverage run --source='\video' manage.py test
+    - ll *.xml
+    - coverage run --source='video' manage.py test
     - ret=$?
     - coverage xml
     - exit $ret
