--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.inclusions= users/**/*, tests/**/*, coding/**/*, fileshow/**/*, files/**/*, video/**/*
-sonar.exclusions=**/migrations/*,xadmin/**/*
-sonar.python.coverage.reportPath=coverage.xml
+sonar.inclusions= video/**/*
+sonar.exclusions=**/migrations/*
+sonar.python.coverage.reportPath=coverage-reports/coverage.xml
 sonar.python.xunit.reportPath=xunit-reports/xunit-result.xml
